<resources xmlns:its="http://www.w3.org/2005/11/its" its:version="1.0">
    <string name="add">Add</string>
    <string name="all">All</string>
    <string name="app_name">Gospel Library</string>
    <string name="auto">Auto</string>
    <string name="allow_in_app_notifications">Allow In-App Notifications</string>
    <string name="exact_phrase">Exact Phrase</string>
    <string name="keywords">Keywords</string>
    <string name="beta" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Beta</string>
    <string name="bookmark">Bookmark</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_all">Cancel All</string>
    <string name="content">Content</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="define">Define</string>
    <string name="dev" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Development</string>
    <string name="display">Display</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="download_all">Download All</string>
    <string name="download_item">Download Item</string>
    <string name="edit_note">Edit Note</string>
    <string name="feedback">Feedback</string>
    <string name="keep">Keep</string>
    <string name="library">Library</string>
    <string name="link">Link</string>
    <string name="links">Links</string>
    <string name="merge">Merge</string>
    <string name="never">Never</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="none">None</string>
    <string name="ok">OK</string>
    <string name="prod" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Production</string>
    <string name="remove">Remove</string>
    <string name="remove_all">Remove All</string>
    <string name="rename">Rename</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="screen_settings">Screen Settings</string>
    <string name="share">Share</string>
    <string name="skip">Skip</string>
    <string name="sort">Sort</string>
    <string name="staging" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Staging</string>
    <string name="template" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Template</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="theme_default">Default</string>
    <string name="theme_night">Night</string>
    <string name="theme_sepia">Sepia</string>
    <string name="theme_dark_blue">Dark Blue</string>
    <string name="theme_magenta">Magenta</string>
    <string name="today">Today</string>
    <string name="undo">Undo</string>
    <string name="update">Update</string>
    <string name="view">View</string>
    <string name="yes">Yes</string>
    <string name="yesterday">Yesterday</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="create_note">Create Note</string>
    <string name="add_tag_hint" comment="hint to prompt the user to start typing to add a new tag">Add tag</string>
    <string name="add_to">Add to</string>
    <string name="add_to_ellipsis">Add to…</string>
    <string name="add_to_notebook">Add to Notebook</string>
    <string name="annotation_no_content" comment="Shown on the all notes page when the content associated with a highlight isn't downloaded">Cannot show annotation because “%s” is not installed.</string>
    <string name="app_update_available_message" comment="The message displayed on the second line of the notification when an update is available">Tap to install update.</string>
    <string name="app_update_available" comment="The title displayed as a notification when an update is available">A Gospel Library update is available.</string>
    <string name="audio_settings" comment="Menu option to display settings for audio playback">Audio Settings</string>
    <string name="backup_annotations_message">Signing in with an LDS Account backs up all your highlights, notes, and bookmarks, keeping them safe and making them available on the web or any mobile device.</string>
    <string name="backup_annotations_title">Back Up Annotations</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_added">Bookmark Added</string>
    <string name="bookmark_empty">You have not added any bookmarks.</string>
    <string name="bookmark_updated">Bookmark Updated</string>
    <string name="cast" comment="as in Chromecast; send to a different screen">Cast</string>
    <string name="catalog_title">Gospel Library Catalog</string>
    <string name="choose_highlight" comment="title for selecting one of many highlights">Choose Highlight</string>
    <string name="citation_chapter_verse_separator">:</string>
    <string name="citation_chapter_verse_separator_text">%1$s:%2$s</string>
    <string name="citation_range_separator">–</string>
    <string name="citation_range_group_separator">", "</string>
    <string name="clear_downloaded_media">Clear Downloaded Media</string>
    <string name="clear_history">Clear History</string>
    <string name="content_no_content" comment="Shown in content drawer">Cannot show content because “%s” is not installed.</string>
    <string name="content_not_downloaded">%s not downloaded.</string>
    <string name="continuous_play" comment="Audio setting to continue on to the next chapter/book or stop playback at the end of each chapter">Continuous Play</string>
    <string name="copied_to_clipboard" comment="Copy and paste">Text Copied to Clipboard</string>
    <string name="create_new_tag" comment="An option given to the user when a tag they entered doesn't exist and needs to be created">Create “%s”</string>
    <string name="current_downloads">Current Downloads</string>
    <string name="custom_collections">Custom Collections</string>
    <string name="delete_annotation_title">Remove Annotation</string>
    <string name="delete_annotation_message">Any notes, tags, or links attached to this highlight will also be removed.</string>
    <string name="delete_collection_item_title">Delete “%1$s”?</string>
    <string name="delete_media_all_message" comment="message for dialog confirming delete action">%s will be deleted.\n\nDelete all media?</string>
    <string name="delete_media_all_partial_failed" comment="message confirming that some file failed to be deleted">Unable to delete all media.</string>
    <string name="delete_media_book_message" comment="message for dialog confirming delete action">%2$s will be deleted from “%1$s”.\n\nDelete media?</string>
    <string name="delete_media" comment="title for dialog confirming delete action">Delete Media</string>
    <string name="delete_notebooks_title" comment="title for dialog confirming delete of multiple notebook">Delete Notebooks</string>
    <string name="delete_notebooks_message" comment = "message for dialog confirming delete of multiple notebooks">Delete selected notebooks?</string>
    <string name="delete_tag_title_single" comment="title for dialog confirming delete of a single tag">Delete Tag</string>
    <string name="delete_tag_title_multiple" comment="title for dialog confirming delete of multiple tag">Delete Tags</string>
    <string name="delete_tag_message_single" comment="title for dialog confirming delete of a single tag">Are you sure you want to remove this tag from all notes and highlights?</string>
    <string name="delete_tag_message_multiple" comment="title for dialog confirming delete of multiple tags">Are you sure you want to remove these tags from all notes and highlights?</string>
    <string name="deleted">%s Deleted</string>
    <string name="deleted_bookmark" comment = "message stating that a single bookmark was deleted">%s bookmark deleted.</string>
    <string name="deleted_notebook" comment = "message stating that a single notebook was deleted">%s notebook deleted.</string>
    <string name="developer_mode_disabled" translatable="false">Developer Mode Disabled</string>
    <string name="developer_mode_enabled" translatable="false">Developer Mode Enabled</string>
    <string name="dialog_sign_out_confirmation">Are you sure you want to sign out?</string>
    <string name="double_tap_fullscreen_training">Tip: Double-tap the screen to exit full screen mode.</string>
    <string name="download_audio" comment="download audio">Download Audio</string>
    <string name="download_all_selected_confirm">%d items will be downloaded.\n\nDownload selected items?</string>
    <string name="download_cancel_confirm_all">All current downloads will be canceled.\n\nCancel downloads?</string>
    <string name="download_cancel">Cancel Download</string>
    <string name="download_canceling">Canceling download…</string>
    <string name="download_item_message">%s is not installed. Would you like to download it now?</string>
    <string name="download_video" comment="download video">Download Video</string>
    <string name="downloaded_media">Downloaded Media</string>
    <string name="downloading_ellipsis">Downloading…</string>
    <string name="downloading_audio">Downloading audio for %s</string>
    <string name="find_by_name">Find by name</string>
    <string name="lds_account_summary">An LDS Account is used to back up and synchronize your annotations across devices and on LDS.org.</string>
    <string name="loading_ellipsis">Loading…</string>
    <string name="mark" comment="Select highlight color">Mark</string>
    <string name="menu_new_screen">New Screen…</string>
    <string name="no_history">No History</string>
    <string name="no_history_description">Explore content, find your path, and go back to it.</string>
    <string name="no_notebooks" comment="The message to show when there are no notebooks">No Notebooks</string>
    <string name="no_notebooks_description">Create notebooks to collect and organize your notes for talks, lessons, and personal study.</string>
    <string name="no_tagged_content" comment="The message to show when there are no tags">No Tagged Content</string>
    <string name="no_tagged_content_description">Attach a tag to any piece of content for future reference.</string>
    <string name="playback_speed" comment="Option in audio settings to set the speed for audio playback">Playback Speed</string>
    <string name="pref_downloaded_media_summary" comment="description of what this option will allow">Manage or view downloaded audio and video.</string>
    <string name="pref_show_obsolete">Show Obsolete Content</string>
    <string name="pref_general_list_mode">List Mode</string>
    <string name="pref_hide_footnotes">Hide Footnotes</string>
    <string name="pref_limit_mobile_network_subtitle">Only Download and Stream on Wi-Fi</string>
    <string name="pref_limit_mobile_network">Limit Mobile Network Use</string>
    <string name="pref_theme">Theme</string>
    <string name="screens_separate_windows">Show Screens as Separate Windows</string>
    <string name="sort_by_count" comment="Sort items by their count">Sort by Count</string>
    <string name="sort_by_most_recent" comment="Sort items with the most recent at the top">Sort by Most Recent</string>
    <string name="sort_by_name" comment="sort items by their name">Sort by Name</string>
    <string name="text_size" comment="">Text Size</string>
    <string name="text_to_speech_settings" comment="This will take users to the system's Text-to-speech settings">Text-to-speech Settings</string>
    <string name="video_quality">Video Quality</string>
    <string name="voice" comment="Setting for selecting the type of voice to use for main content audio playback (chapter headers, etc. may be read in a different voice)">Main Voice</string>
</resources>