<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_lds_action_search_24dp"
        android:orderInCategory="10"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_bookmark"
        android:icon="@drawable/ic_toolbar_bookmarks_screens_history_24dp"
        android:orderInCategory="30"
        android:title="@string/bookmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_new_screen"
        android:title="@string/menu_new_screen"
        app:showAsAction="never" />
</menu>
