<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/itemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/clearHistoryView"
        android:clickable="true"
        android:scrollbars="vertical"/>

    <org.lds.mobile.ui.widget.EmptyStateIndicator
        android:id="@+id/emptyStateIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:image="@drawable/ic_lds_history_80dp"
        app:imageTint="?attr/emptyStateImageColor"
        app:subTitle="@string/no_history_description"
        app:subTitleTextColor="?attr/emptyStateSubTitleColor"
        app:title="@string/no_history"
        app:titleTextColor="?attr/emptyStateTitleColor"
        />

    <TextView
        android:id="@+id/clearHistoryView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/clear_history_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/clear_history"
        android:textAllCaps="true"
        android:textColor="?attr/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"/>
</RelativeLayout>